Extracted lists to a separate variables to make code more readable. Added explanation of JsonProcessingException to the Javadoc